[gd_scene load_steps=3 format=3 uid="uid://b6m01in6m6qc7"]

[ext_resource type="Script" uid="uid://bh05wulsindhl" path="res://Scenes/Fases/enem_quest.gd" id="1_6c32d"]
[ext_resource type="Texture2D" uid="uid://cpxlxldo3gajs" path="res://Assets/Art/inventory-background.png" id="1_wixi3"]

[node name="Enem_quest" type="Control"]
layout_mode = 3
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2
script = ExtResource("1_6c32d")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 557.0
offset_bottom = -166.0
grow_vertical = 2

[node name="NinePatchRect" type="NinePatchRect" parent="Panel"]
layout_mode = 0
offset_left = 4.0
offset_top = -1.0
offset_right = 555.0
offset_bottom = 480.0
texture = ExtResource("1_wixi3")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="Label" type="Label" parent="Panel/NinePatchRect"]
layout_mode = 0
offset_left = 5.0
offset_top = 11.0
offset_right = 535.0
offset_bottom = 242.0
text = "(Enem 2011) Um mecânico de uma equipe de corrida necessita que as 
seguintes medidas de um carro sejam convertidas para uma escala
 de 1:20, para construir um modelo em miniatura:

 * Distância entre os eixos: 280 cm
 * Altura do carro: 120 cm

As medidas do entre-eixos e da altura na miniatura, em centímetros,
 serão, respectivamente:"

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/NinePatchRect"]
layout_mode = 0
offset_left = 8.0
offset_top = 259.0
offset_right = 115.0
offset_bottom = 430.0

[node name="ButtonA" type="Button" parent="Panel/NinePatchRect/VBoxContainer"]
layout_mode = 2
text = "A) 14,0 e 6,0"

[node name="ButtonB" type="Button" parent="Panel/NinePatchRect/VBoxContainer"]
layout_mode = 2
text = "B) 28,0 e 12,0"

[node name="ButtonC" type="Button" parent="Panel/NinePatchRect/VBoxContainer"]
layout_mode = 2
text = "C) 140 e 60"

[node name="ButtonD" type="Button" parent="Panel/NinePatchRect/VBoxContainer"]
layout_mode = 2
text = "D) 280 e 120"

[node name="ButtonE" type="Button" parent="Panel/NinePatchRect/VBoxContainer"]
layout_mode = 2
text = "E) 5600 e 2400"

[node name="Label2" type="Label" parent="Panel/NinePatchRect"]
layout_mode = 0
offset_left = 19.0
offset_top = 446.0
offset_right = 456.0
offset_bottom = 469.0

[connection signal="pressed" from="Panel/NinePatchRect/VBoxContainer/ButtonA" to="." method="_on_button_a_pressed"]
[connection signal="pressed" from="Panel/NinePatchRect/VBoxContainer/ButtonB" to="." method="_on_button_b_pressed"]
[connection signal="pressed" from="Panel/NinePatchRect/VBoxContainer/ButtonC" to="." method="_on_button_c_pressed"]
[connection signal="pressed" from="Panel/NinePatchRect/VBoxContainer/ButtonD" to="." method="_on_button_d_pressed"]
[connection signal="pressed" from="Panel/NinePatchRect/VBoxContainer/ButtonE" to="." method="_on_button_e_pressed"]
